--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^2.0.1",
+    "react-router": "^2.0.1"
   }
 }
